# algotrix-go

./: .gitignore  AGENTS.md  ecosystem.config.cjs  go.mod  go.sum  main.go  package-lock.json  package.json  token.json
regime-classifier/: CALIBRATION_SPEC.md  Dockerfile  PROMOTE_E3_SPEC.md  TWO_STAGE_SPEC.md  cli.py  docker-compose.yml  label_review_results.csv  pyproject.toml  requirements.txt
regime-classifier/data/: calibration_labels.csv  cluster_analysis.csv  e4_labels.csv  e5_labels.csv  features_cache.json  gap_feature_results.csv  gap_features.csv  indicator_bounds.json  nifty50_constituents.json  preopen_feature_matrix.csv  preopen_feature_matrix_v2.csv  preopen_feature_matrix_v3.csv  preopen_lightgbm_3class_predictions.csv  preopen_lightgbm_trend_range_predictions.csv  preopen_lightgbm_updown_predictions.csv  preopen_logreg_3class_predictions.csv  preopen_logreg_trend_range_predictions.csv  preopen_logreg_updown_predictions.csv  preopen_tick_evolution.csv  preopen_xgboost_3class_predictions.csv  preopen_xgboost_trend_range_predictions.csv  preopen_xgboost_updown_predictions.csv  regime_gt_backup_set_a.csv  sp500_daily.csv  usdinr_daily.csv  v2_feature_matrix.csv
regime-classifier/migrations/: 003_regime_tables.sql  004_layer1_new_feeds.sql  005_phase2_regime_scoring.sql  006_nseix_tables.sql
regime-classifier/models/: gmm_model.pkl  hmm_model.pkl
regime-classifier/reports/: evaluation_report.csv  preopen_evaluation.md  v2_evaluation.md
regime-classifier/scripts/: backfill_checkpoint.json  backfill_fii_dii.py  backfill_global_cues.py  backfill_nseix.py  (+14 more)
(+438 files in other folders)
